--- a/index.html
+++ b/index.html
@@ -1,13 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Lion Heart - Bike Shop in Oreland, PA</title>
+
+    <!-- This is Eric Meyers CSS reset -->
+    <link rel="stylesheet" href="css-reset.css">
+
+    <!-- This is my own style sheet -->
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Roboto:300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div class="container">
+        <header></header>
+        <main>
+            <div class="herobox1">
+                <h1>Lorem ipsum dolor sit amet.</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, odit, voluptatibus qui dignissimos
+                    tempora, quisquam perferendis eveniet doloremque minima voluptates obcaecati sint dolore praesentium
+                    nostrum esse laboriosam. Possimus, ullam adipisci?</p>
+            </div>
+            <div class="herobox2">
+                <h1>Lorem ipsum dolor sit amet.</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, odit, voluptatibus qui dignissimos
+                    tempora, quisquam perferendis eveniet doloremque minima voluptates obcaecati sint dolore praesentium
+                    nostrum esse laboriosam. Possimus, ullam adipisci?</p>
+            </div>
+        </main>
+        <div class="cards">
+            <div class="card1">Card1</div>
+            <div class="card2">Card2</div>
+            <div class="card3">Card3</div>
+        </div>
+        <footer>
+            <p>Lion Heart Bikes 2020</p>
+        </footer>
+    </div>
 </body>
+
 </html>
