--- a/index.html
+++ b/index.html
@@ -13,33 +13,63 @@
     <!-- This is my own style sheet -->
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Roboto:300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.12.0/css/light.css"
+        integrity="sha384-i+ivMdAc0+wLEnd+UdXLpYGNTbyn/0Rjz7EqmkqEOkfat5/2T+S63wn3WDk6h4Yh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.12.0/css/fontawesome.css"
+        integrity="sha384-CtsKDnRWWHDhjRZ5qgpCFCGpib2FU2SChFu0xRt81grgvXq1P+lbpROQoBLxlU4o" crossorigin="anonymous">
 
     <title>Document</title>
 </head>
 
 <body>
     <div class="container">
-        <header></header>
+        <header>
+            <div class="logo"><img src="img/logo.svg" alt="lion head logo"></div>
+            <nav class="nav-bar">
+                <ul class="nav-links">
+                    <li class="nav-item"><a href="#">Home</a></li>
+                    <li class="nav-item"><a href="#">Book Online</a></li>
+                    <li class="nav-item"><a href="#">About</a></li>
+                    <li class="nav-item"><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+
         <main>
             <div class="herobox1">
-                <h1>Lorem ipsum dolor sit amet.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, odit, voluptatibus qui dignissimos
-                    tempora, quisquam perferendis eveniet doloremque minima voluptates obcaecati sint dolore praesentium
-                    nostrum esse laboriosam. Possimus, ullam adipisci?</p>
+                <h1>Mobile bike repairs.</h1>
+                <p>Many people have difficulty getting their bikes to a bike shop. We call to your office or home
+                    anywhere in Philadelphia Area.
+                </p>
+                <p>Fast, convenient bike servicing with up-front pricing. All without the hassle of taking your bike
+                    into a shop.</p>
             </div>
             <div class="herobox2">
-                <h1>Lorem ipsum dolor sit amet.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, odit, voluptatibus qui dignissimos
-                    tempora, quisquam perferendis eveniet doloremque minima voluptates obcaecati sint dolore praesentium
-                    nostrum esse laboriosam. Possimus, ullam adipisci?</p>
+                <img src="img/repair.jpg" alt="Repair Shop">
             </div>
         </main>
         <div class="cards">
-            <div class="card1">Card1</div>
-            <div class="card2">Card2</div>
-            <div class="card3">Card3</div>
+            <div class="card1">
+                <a href="">
+                    <i class="fal fa-bicycle"></i>
+                    <h2>Book Online</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, dolores.</p>
+                </a>
+            </div>
+            <div class="card2">
+                <a href="">
+                    <i class="fal fa-cogs"></i>
+                    <h2>Services</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, dolores.</p>
+                </a>
+            </div>
+            <div class="card3">
+                <a href="">
+                    <i class="fal fa-phone-rotary"></i>
+                    <h2>Call for an Estimate</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, dolores.</p>
+                </a>
+            </div>
         </div>
         <footer>
             <p>Lion Heart Bikes 2020</p>
