add button and cards positioning

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
                 </p>
                 <p>Fast, convenient bike servicing with up-front pricing. All without the hassle of taking your bike
                     into a shop.</p>
+
+                <a class="btn" href="#">Book Online</a>
             </div>
             <div class="herobox2">
                 <img src="img/repair.jpg" alt="Repair Shop">
