add style to button nav

--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
             <div class="logo"><img src="img/logo.svg" alt="lion head logo"></div>
             <nav class="nav-bar">
                 <ul class="nav-links">
-                    <li class="nav-item"><a href="#">Home</a></li>
-                    <li class="nav-item"><a href="#">Book Online</a></li>
-                    <li class="nav-item"><a href="#">About</a></li>
-                    <li class="nav-item"><a href="#">Contact</a></li>
+                    <a href="#" class="btn-bg">Book Online</a>
+                    <a href="#" class="btn-bg">About</a>
+                    <a href="#" class="btn-bg">Contact</a>
                 </ul>
             </nav>
         </header>
@@ -73,9 +72,9 @@
                 </a>
             </div>
         </div>
-        <footer>
+        <!-- <footer>
             <p>Lion Heart Bikes 2020</p>
-        </footer>
+        </footer> -->
     </div>
 </body>
 
